separate & unite @ end of day

--- a/data-tidying.Rmd
+++ b/data-tidying.Rmd
@@ -155,3 +155,48 @@ catch_joined <- left_join(catch_cleaned, region_clean,
 head(catch_joined)
 ```
 
+## Spread
+
+Make a wide data frame using `spread`
+
+```{r}
+catch_wide <- catch_cleaned %>% 
+  filter(Year > 1990) %>% 
+  select(-Catch_thousands) %>% 
+  spread(key = Year, value = Catch)
+
+head(catch_wide)
+```
+
+
+# Separate & Unite
+
+```{r}
+dates_df <- data.frame(date = c("5/24/1930",
+                                "5/25/1930",
+                                "5/26/1930",
+                                "5/27/1930",
+                                "5/28/1930"),
+                       stringsAsFactors = FALSE)
+
+dates_df
+
+```
+Separate the single date column into a month, day, and year column
+```{r}
+dates_sep <- dates_df %>% 
+  separate(col=date, into=c("month", "day", "year"), sep="/")
+
+head(dates_sep)
+```
+
+Now unite into a date the way we want it to be... YYYY-MM-DD.  Still need to figure out how to get it into a 2-digit month.
+
+```{r}
+dates_unite <- dates_sep %>% 
+  unite(date_iso, year, month, day, sep="-")
+
+head(dates_unite)
+```
+
+
